--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ app/static/profile_pics/*.gif
 app/static/profile_pics/*.png
 app/static/score_screenshots/*.jpg
 app/static/score_screenshots/*.png
+app/static/tournament_pics/*.jpg
+app/static/tournament_pics/*.png
+migrations/
