Rivals kinda sorta work-ish

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ app/static/score_screenshots/*.jpeg
 app/static/tournament_pics/*.jpg
 app/static/tournament_pics/*.png
 migrations/
+app/static/rivals/*.json
