Fixed short cuts not displaying, updated scraper

--- a/.gitignore
+++ b/.gitignore
@@ -126,4 +126,5 @@ migrations/
 app/static/rivals/*.json
 weekly.json
 app/static/songthumbs/*.png
+app/static/diffballs/*.png
 site.SQLALCHEMY_DATABASE_URI
